5) Plugin add to project legend a layer called "Streetview snapshots log" where the snapshots stored are visible as html tips hovering with mouse (remember to enable map tips from view menu)

v3.01 (21/4/2014)
1) Modified “take a snapshot” procedure to fulfil article 10.1.3 of google maps terms of service
2) Added action to “Streetview_snapshot_log” layer to view saved snapshots clicking on camera icon (“Webview” layer action activation needed)

v4.0 (29/5/2014)
1) Dynamic resizing of Windows with responsive rescaling of contents
2) CTRL + Click&Drag cursor to open view straight to predifined browser
3) Added dynamic icon to show on map current Streetview position and field of view
4) Nominating Geocoding on the fly, to get complete address when taking snapshot of the view
5) Recording Field of View in the snapshot URL field

v4.1 (12/06/2014)
1) fixed float conversion bug during window resizing
2) improved zoom to fov conversion
3) fixed srs setting
4) oriented symbol qml style

v5.0 (4/11/2014)
1) Dockable Dialog Window
2) Reformat dialog Button Position
3) Click on Dialog to trigger tool
4) Terms of service agreement

v5.1 (5/1/2015)
1) terms of service dialog behaviour improved
2) menu icon toggle on/off dock widget

v6.0 (3/4/2015
1) info layer overlay in streetview window
2) info layer overlay in bing window
3) new gui toolbar
4) location tracking improvement
5) resize issue opening view fixed

v6.1 (6/4/2015)
1) malformed html blocking script issue fixed
2) open in browser points always to Bing issue fixed

v6.2 (6/4/2015)
1) Poor performance with WGS84 layers issue fixed
2) Changing default Distance Buffer depending from info layer mapunits

v6.3 (27/7/2015)
1) Map rotation support
2) Bing bird's eye connection issues fixed
3) Proxying issues fixed
4) Proxying subnet exclusions fixed
5) Line and polygon infolayer support
6) A4 keymap pdf printing
7) Buttons toolbar compacted
8) Map follows streetview option