@@ -21,7 +21,7 @@ email=enricofer@gmail.com
 # Optional items:
 
 # Uncomment the following line and add your changelog entries:
-changelog = v6.3 (27/7/2015) 1) Map rotation support 2) Bing bird's eye connection issues fixed 3) Proxying issues fixed 4) Proxying subnet exclusions fixed 5) Line and polygon infolayer support 6) A4 keymap pdf printing 7) Buttons toolbar compacted 8) Map follows streetview option
+changelog = v6.3 (27/7/2015) 1) Map rotation support 2) Bing bird's eye connection issues fixed 3) Proxying issues fixed 4) Proxying subnet exclusions fixed 5) Line and polygon infolayer support 6) A4 keymap pdf printing 7) Buttons toolbar compacted 8) Map follows streetview option 9) Resize behaviour issues fixed
 # tags are comma separated with spaces allowed
 tags = google, street, view, streetview, bing, bird s eye, snapshot, nominating, overlay, markers
 
