@@ -1,9 +1,9 @@
 # -*- coding: utf-8 -*-
 
-# Form implementation generated from reading ui file '/home/enrico/Documenti/plugins/go2streetview/ui_go2streetviewDum.ui'
+# Form implementation generated from reading ui file 'Z:\dev\go2streetview\ui_go2streetviewDum.ui'
 #
-# Created: Mon Apr 20 19:06:05 2015
-#      by: PyQt4 UI code generator 4.10.4
+# Created: Thu Jul 30 16:08:38 2015
+#      by: PyQt4 UI code generator 4.11.3
 #
 # WARNING! All changes made in this file will be lost!
 
@@ -26,7 +26,7 @@ except AttributeError:
 class Ui_go2streetviewDum(object):
     def setupUi(self, go2streetviewDum):
         go2streetviewDum.setObjectName(_fromUtf8("go2streetviewDum"))
-        go2streetviewDum.resize(326, 281)
+        go2streetviewDum.resize(234, 281)
         sizePolicy = QtGui.QSizePolicy(QtGui.QSizePolicy.Expanding, QtGui.QSizePolicy.Expanding)
         sizePolicy.setHorizontalStretch(0)
         sizePolicy.setVerticalStretch(0)
@@ -35,12 +35,12 @@ class Ui_go2streetviewDum(object):
         self.verticalLayout = QtGui.QVBoxLayout(go2streetviewDum)
         self.verticalLayout.setObjectName(_fromUtf8("verticalLayout"))
         self.iconRif = QtGui.QLabel(go2streetviewDum)
-        sizePolicy = QtGui.QSizePolicy(QtGui.QSizePolicy.Preferred, QtGui.QSizePolicy.Preferred)
+        sizePolicy = QtGui.QSizePolicy(QtGui.QSizePolicy.Ignored, QtGui.QSizePolicy.Ignored)
         sizePolicy.setHorizontalStretch(0)
         sizePolicy.setVerticalStretch(0)
         sizePolicy.setHeightForWidth(self.iconRif.sizePolicy().hasHeightForWidth())
         self.iconRif.setSizePolicy(sizePolicy)
-        self.iconRif.setMinimumSize(QtCore.QSize(0, 100))
+        self.iconRif.setMinimumSize(QtCore.QSize(0, 30))
         self.iconRif.setText(_fromUtf8(""))
         self.iconRif.setPixmap(QtGui.QPixmap(_fromUtf8(":/plugins/go2streetview/res/icoStreetview.png")))
         self.iconRif.setScaledContents(False)
@@ -48,7 +48,7 @@ class Ui_go2streetviewDum(object):
         self.iconRif.setObjectName(_fromUtf8("iconRif"))
         self.verticalLayout.addWidget(self.iconRif)
         self.labelBottom = QtGui.QLabel(go2streetviewDum)
-        sizePolicy = QtGui.QSizePolicy(QtGui.QSizePolicy.Preferred, QtGui.QSizePolicy.Preferred)
+        sizePolicy = QtGui.QSizePolicy(QtGui.QSizePolicy.Ignored, QtGui.QSizePolicy.Minimum)
         sizePolicy.setHorizontalStretch(0)
         sizePolicy.setVerticalStretch(0)
         sizePolicy.setHeightForWidth(self.labelBottom.sizePolicy().hasHeightForWidth())
@@ -59,7 +59,12 @@ class Ui_go2streetviewDum(object):
         self.labelBottom.setObjectName(_fromUtf8("labelBottom"))
         self.verticalLayout.addWidget(self.labelBottom)
         self.labelTop = QtGui.QLabel(go2streetviewDum)
-        self.labelTop.setMinimumSize(QtCore.QSize(0, 100))
+        sizePolicy = QtGui.QSizePolicy(QtGui.QSizePolicy.Ignored, QtGui.QSizePolicy.Ignored)
+        sizePolicy.setHorizontalStretch(0)
+        sizePolicy.setVerticalStretch(0)
+        sizePolicy.setHeightForWidth(self.labelTop.sizePolicy().hasHeightForWidth())
+        self.labelTop.setSizePolicy(sizePolicy)
+        self.labelTop.setMinimumSize(QtCore.QSize(0, 20))
         self.labelTop.setAlignment(QtCore.Qt.AlignHCenter|QtCore.Qt.AlignTop)
         self.labelTop.setObjectName(_fromUtf8("labelTop"))
         self.verticalLayout.addWidget(self.labelTop)
